# creator-helper

./: biome.json  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  ollama_processor.rs  video_processor.rs
src/components/: upload-video.tsx  video-analysis.tsx
