[package]
name = "creator-helper"
version = "0.1.0"
description = "A Tauri App"
authors = ["Victor Micco"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.9"
tauri-plugin-store = "2.1.0"
tauri-plugin-dialog = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
